apps/base/infra-kubernetes-dashboard/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-kubernetes-dashboard
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
