apps/base/infra-kubernetes-dashboard/deploy/dashboard-metrics-scraper-networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-dashboard-metrics-scraper
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kubernetes-dashboard
      app.kubernetes.io/part-of: kubernetes-dashboard
      app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper

  ingress:
    - ports:
        - port: 8000
      from:
        # Allow from kubernetes-dashboard-api
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: kubernetes-dashboard
              app.kubernetes.io/part-of: kubernetes-dashboard
              app.kubernetes.io/name: kubernetes-dashboard-api
