apps/base/infra-kubernetes-dashboard/deploy/scraper-networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-dashboard-metrics-scraper
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-dashboard
      app.kubernetes.io/component: metrics-scraper

  ingress:
    # Allow from kubernetes-dashboard
    - ports:
        - port: 8000
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: kubernetes-dashboard
              app.kubernetes.io/component: dashboard
